Twitter dark mode icon CSS class fix

--- a/src/styles/toolbar.module.scss
+++ b/src/styles/toolbar.module.scss
@@ -103,7 +103,7 @@ $breakpoint-tablet-portrait: 560px;
 }
 
 .time span {
-    font-size: 20px;
+    font-size: 22px;
     font-family: "Alarm Clock";
 }
 
